# matrix-hmc

./: .gitignore  README.md  __init__.py  algebra.py  cli.py  config.py  dataAnalysisHelpers.py  hmc.py  main.py  pfaffian.py  pyproject.toml  simulation.py  tmp.py
models/: 1mm.py  __init__.py  adjoint_det.py  base.py  pikkt10d.py  pikkt4d_type1.py  pikkt4d_type2.py  pikkt4d_type2_rhmc.py  qcd_4d.py  qcd_5d.py  susyym_3d.py  utils.py  yangmills.py
tests/: test_ad_matrix.py  test_cli.py  test_codebase.py  test_dataAnalysisHelpers.py  test_models.py  test_qcd4d.py  test_qcd5d.py
